fix(timeline): annotation alignment on Safari

--- a/frontend/assets/css/timeline.scss
+++ b/frontend/assets/css/timeline.scss
@@ -183,8 +183,8 @@ section {
           font-size: 1.2vw;
           line-height: 0;
           width: 15vw;
-          left: 6.5vw;
-          top:0.5vw;
+          margin-left: 6.5vw;
+          margin-top:0.3vw;
           }//&:before
       }
     } // &:nth-child(9)
@@ -231,8 +231,8 @@ section {
         font-size: 1.2vw;
         line-height: 0;
         width: 15vw;
-        left: -15vw;
-        top:0.5vw;
+        margin-left: -15vw;
+        margin-top:0.3vw;
         }//&:before
       }
       &:before {
